--- a/build.gradle
+++ b/build.gradle
@@ -47,10 +47,10 @@ dependencies {
     mappings   "net.fabricmc:yarn:${Versions['yarn_mappings']}:v2"
     modImplementation "net.fabricmc:fabric-loader:${Versions['loader_version']}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${Versions['fabric_version']}"
-    modImplementation "io.github.cottonmc:cotton-client-commands:${Versions['ccc_version']}"
-    include    "io.github.cottonmc:cotton-client-commands:${Versions['ccc_version']}"
-    modImplementation "de.guntram.mcmod:crowdin-translate:1.1"
-    include "de.guntram.mcmod:crowdin-translate:1.1"
+    // modImplementation "io.github.cottonmc:cotton-client-commands:${Versions['ccc_version']}"
+    // include    "io.github.cottonmc:cotton-client-commands:${Versions['ccc_version']}"
+    // modImplementation "de.guntram.mcmod:crowdin-translate:1.1"
+    // include "de.guntram.mcmod:crowdin-translate:1.1"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
