update to 1.17-pre5

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.6-SNAPSHOT'
+	id 'fabric-loom' version '0.8-SNAPSHOT'
 	id "com.modrinth.minotaur" version "1.1.0"
 }
 
@@ -10,17 +10,13 @@ repositories {
 	maven {
 		url = "https://minecraft.guntram.de/maven/"
 	}
-	maven {
-        name = 'CottonMC'
-        url = 'http://server.bbkr.space:8081/artifactory/libs-release'
-	}    
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 16
+targetCompatibility = 16
 
 ext.Versions = new Properties()
-Versions.load(file("Versionfiles/mcversion-21w13a.properties").newReader())
+Versions.load(file("Versionfiles/mcversion-1.17-pre5.properties").newReader())
 
 archivesBaseName = "grabcraft-litematic"
 ext.projectVersion = "0.4"
@@ -32,15 +28,11 @@ minecraft {
 }
 
 processResources {
-	inputs.property "version", project.version
+    inputs.property "version", project.version
 
-        from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
-	}
-	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
-	}
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 dependencies {
@@ -48,8 +40,6 @@ dependencies {
     mappings   "net.fabricmc:yarn:${Versions['yarn_mappings']}:v2"
     modImplementation "net.fabricmc:fabric-loader:${Versions['loader_version']}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${Versions['fabric_version']}"
-    compile "com.oneandone:composite-jks:1.0"
-    include "com.oneandone:composite-jks:1.0"
     modImplementation "de.guntram.mcmod:GBfabrictools:${Versions['gbfabrictools_version']}"
     include    "de.guntram.mcmod:GBfabrictools:${Versions['gbfabrictools_version']}"
 }
