--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ sourceCompatibility = 16
 targetCompatibility = 16
 
 ext.Versions = new Properties()
-Versions.load(file("Versionfiles/mcversion-1.17-pre5.properties").newReader())
+Versions.load(file("Versionfiles/mcversion-1.17.properties").newReader())
 
 archivesBaseName = "grabcraft-litematic"
 ext.projectVersion = "0.4"
