--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 ext.Versions = new Properties()
-Versions.load(file("Versionfiles/mcversion-22w45a.properties").newReader())
+Versions.load(file("Versionfiles/mcversion-1.19.3.properties").newReader())
 
 archivesBaseName = "grabcraft-litematic"
 ext.projectVersion = "0.5"
